[gd_scene load_steps=4 format=3 uid="uid://k6grn43t7quh"]

[ext_resource type="Script" path="res://current_player.gd" id="1_6w1x7"]
[ext_resource type="Script" path="res://main.gd" id="1_brcam"]
[ext_resource type="PackedScene" uid="uid://qdhqqdvnyl8x" path="res://player_ant.tscn" id="2_uqsy7"]

[node name="main" type="Node2D"]
script = ExtResource("1_brcam")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1918.0
offset_bottom = 1078.0
color = Color(0, 0, 0, 1)

[node name="player_ant" parent="." instance=ExtResource("2_uqsy7")]
position = Vector2(258, 126)

[node name="ant2" parent="." instance=ExtResource("2_uqsy7")]

[node name="current_player" type="Node" parent="."]
script = ExtResource("1_6w1x7")
